--- a/assets/html/index.ejs
+++ b/assets/html/index.ejs
@@ -2,13 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale:1.0" />
     <title><%= htmlWebpackPlugin.options.title %></title>
-    <link
-      href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@300;400;700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;700&display=swap" rel="stylesheet">
   <body>
     <div id="app"></div>
   </body>
